# swisswx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/meteoschweiz/: __init__.py
src/meteoschweiz/forecasts/: __init__.py  forecast_handler.py
src/meteoschweiz/historic/: __init__.py  historic_handler.py
src/meteoschweiz/metadata/: __init__.py  parameters.py  stations.py
tests/: test_meteo_swiss.py
