[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteoschweiz"
version = "0.1.4"
description = "Python package for accessing and processing weather data from MeteoSwiss (Source: MeteoSwiss, CC BY 4.0)"
readme = "README.md"
authors = [
    {name = "Gangireddy Sai Jithendra", email = "jithenkumar1@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests",
    "pandas-stubs",
    "tox>=4.0.0",
    "tox-gh-actions>=2.12.0",
]

[project.urls]
"Homepage" = "https://github.com/saijithendr/MeteoSwiss"
"Bug Tracker" = "https://github.com/saijithendr/MeteoSwiss/issues"
"Contributing" = "https://github.com/saijithendr/MeteoSwiss/blob/master/CONTRIBUTING.md"
"Changelog" = "https://github.com/saijithendr/MeteoSwiss/releases"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "W191",   # Indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["meteoschweiz"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]